client/src/app/dialogs/delete-project/delete-project-dialog.component.css
#main {
    height: 7rem;
    width: 22.5rem;
    text-align: center;
}

button {
    width: 10rem;
    height: 2.8rem;
    padding: 1rem;
    border: none;
    border-radius: 0.8rem;
    color: white;
    cursor: pointer;
    transition: 0.4s;
}

button:hover {
    transform: scale(1.05);
}

#yes {
    background-color: green;
    float: left;
    margin-left: 0.7rem;
}

#no {
    background-color: red;
    float: right;
    margin-right: 0.7rem;
}

